@@ -56,6 +56,7 @@ BIBTEX2HTML_FLAGS=@BIBTEX2HTML_FLAGS@
 BISON = @BISON@
 FIND = @FIND@
 FLEX = @FLEX@
+GROFF = @GROFF@
 GUILE = @GUILE@
 GUILE_CONFIG = @GUILE_CONFIG@
 GUILE_CFLAGS = @GUILE_CFLAGS@
@@ -72,7 +73,7 @@ PERL = @PERL@
 PKTRACE = @PKTRACE@
 PYTHON = @PYTHON@
 SHELL = @SHELL@
-TAR= @TAR@
+TAR = @TAR@
 TBL = @TBL@
 TROFF = @TROFF@
 ZIP = @ZIP@
